# dodge

./: .gitignore  CMakeLists.txt  README.md
include/: AssetManager.hpp  Game.hpp  GameObject.hpp  RenderWindow.hpp
include/Physics/: Physics.hpp
include/Scene/: Scene.hpp
src/: Assets.hpp  Constants.hpp  DodgeGame.cpp  DodgeGame.hpp  Math.hpp  Player.cpp  Player.hpp  main.cpp
src/Game/: Platform.cpp  Platform.hpp  Player.cpp  Player.hpp
src/Scene/: GameScene.cpp  GameScene.hpp
